manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whats-playing-bot
  namespace: whats-playing-bot
spec:
  selector:
    matchLabels:
      app: whats-playing-bot
  replicas: 1
  template:
    metadata:
      labels:
        app: whats-playing-bot
    spec:
      containers:
        - name: whats-playing-bot
          image: ABC
          resources:
            requests:
              memory: 40Mi
              cpu: 2m
            limits:
              memory: 40Mi
          ports:
            - containerPort: 443
